fix: adjust position of cross icon in App.css for better alignment

--- a/pawa-sure/src/App.css
+++ b/pawa-sure/src/App.css
@@ -484,8 +484,8 @@ button:active{
     }
     .cross{
         position: absolute;
-        right: 0rem;
-        top: 11.5rem;
+        right: 0.8rem;
+        top: 11rem;
 
     }
 
